<resources>
    <string name="app_name">e-MiKE</string>
    <string name="splash_screen_tv">e-MiKE</string>
    <string name="splash_screen_tv_explain">E-Modul Mesin Konversi Energi</string>
    <string name="menut_1">KI/KD</string>
    <string name="menut_2">Materi</string>
    <string name="menut_3">Video</string>
    <string name="menut_4">Quiz</string>
    <string name="menut_5">Glossarium</string>
    <string name="menut_6">Tentang</string>
    <string name="menut_7">Bantuan</string>
    <string name="tv_judul_kikd">Kompetensi Inti dan Kompetensi Dasar</string>
    <string name="header_ki">Kompetensi Inti</string>
    <string name="header_ki1">KI 1 (Aspek Kompetensi Sikap Spiritual)</string>
    <string name="header_ki2">KI 2 (Sikap Sosial)</string>
    <string name="header_ki3">KI 3 (Pengetahuan)</string>
    <string name="header_ki4">KI 4 (Keterampilan)</string>
    <string name="isi_ki1">Menghargai dan menghayati ajaran agama yang dianutnya.</string>
    <string name="isi_ki2">Menghargai dan menghayati perilaku jujur, disiplin, tanggungjawab, peduli (toleransi, gotong royong), santun, percaya diri, dalam berinteraksi secara efektif dengan lingkungan sosial dan alam dalam jangkauan pergaulan dan keberadaannya.</string>
    <string name="isi_ki3">Memahami, menerapkan, menganalisis, dan mengevaluasi tentang pengetahuan faktual, konseptual, operasional dasar, dan metakognitif sesuai dengan bidang dan lingkup kerja Dasar dasar Teknik Otomotif. Pada tingkat teknis, spesifik, detil, dan kompleks, berkenaan dengan ilmu pengetahuan, teknologi, seni, budaya, dan humaniora dalam konteks pengembangan potensi diri sebagai bagian dari keluarga, sekolah, dunia kerja, warga masyarakat nasional, regional, dan internasional</string>
    <string name="isi_ki4">Mengolah, menalar, dan menyaji dalam ranah konkret dan ranah abstrak  terkait dengan pengembangan dari yang dipelajarinya di sekolah secara mandiri, dan mampu melaksanakan tugas spesifik di bawah pengawasan langsung.</string>
    <string name="header_kd">Kompetensi Dasar</string>
    <string name="header_kd3">KD 3.1</string>
    <string name="header_kd4">KD 3.4</string>
    <string name="header_kd5">KD 3.5</string>
    <string name="header_kd6">KD 3.6</string>
    <string name="isi_kd4">Memahami proses mesin konversi energi.</string>
    <string name="isi_kd5">Memahami klasifikasi engine.</string>
    <string name="isi_kd6">Memahami cara kerja engine 2 dan 4 langkah.</string>
    <string name="isi_kd7">Memahami cara kerja motor listrik</string>
    <string name="isi_kd8">Memahami cara kerja generator listrik</string>
    <string name="header_menu_subbab">Pilih Materi yang Akan Dipelajari</string>
    <string-array name="subbab_materi">
        <item>Peta Konsep</item>
        <item>Materi 1: Prinsip MKE</item>
        <item>Materi 2: Motor Bakar</item>
        <item>Materi 3: Motor Listrik</item>
        <item>Materi 4: Generator Listrik</item>
    </string-array>
    <string-array name="subbab_materi1">
        <item>Proses MKE</item>
        <item>Macam Energi</item>
        <item>Sifat Energi</item>
    </string-array>
    <string-array name="subbab_materi2">
        <item>Ditinjau dari Proses Pembakarannya</item>
        <item>Ditinjau dari Bahan Bakarnya</item>
        <item>Ditinjau dari Proses Kerjanya</item>
        <item>Perhitungan Motor Bakar</item>
    </string-array>
    <string-array name="subbab_materi3">
        <item>Prinsip Kerja Motor Listrik</item>
        <item>Jenis Motor Listrik</item>
    </string-array>
    <string-array name="subbab_materi4">
        <item>Generator AC</item>
        <item>Generator DC</item>
        <item>Penggunaan Generator</item>
    </string-array>
    <string-array name="test_array">
        <item>test</item>
        <item>test</item>
        <item>test</item>
        <item>test</item>
    </string-array>
    <string-array name="link_icon_video">
        <item>https://i.ytimg.com/vi/AeAqt4mtNSU/hqdefault.jpg?sqp=-oaymwEXCPYBEIoBSFryq4qpAwkIARUAAIhCGAE==%26rs=AOn4CLDxZvMt6SFGPK2yjrGJ6HeoTsB6JQ</item>
        <item>https://i.ytimg.com/vi/2UeHBm5k05o/hqdefault.jpg?sqp=-oaymwEXCPYBEIoBSFryq4qpAwkIARUAAIhCGAE==%26rs=AOn4CLCFV4nzqkVw6cqkIoDzZFYqdHFRaQ</item>
        <item>https://i.ytimg.com/vi/R6hW9QqYHJ4/hqdefault.jpg?sqp=-oaymwEXCPYBEIoBSFryq4qpAwkIARUAAIhCGAE==%26rs=AOn4CLCgdj9QyrFoPe1fLyC5n4zFF9-RBw</item>
        <item>https://i.ytimg.com/vi/3-gklul8hgg/hqdefault.jpg?sqp=-oaymwEXCPYBEIoBSFryq4qpAwkIARUAAIhCGAE==%26rs=AOn4CLAOmWZaMInHWePkPx19PO3pXwjl0g</item>
        <item>https://i.ytimg.com/vi/ob2oRMEYsA0/hqdefault.jpg?sqp=-oaymwEXCPYBEIoBSFryq4qpAwkIARUAAIhCGAE==%26rs=AOn4CLASi2Yen3ERFlsCn3myx96Qgazh7Q</item>
        <item>https://i.ytimg.com/vi/h8jJQpJTiiA/hqdefault.jpg?sqp=-oaymwEXCPYBEIoBSFryq4qpAwkIARUAAIhCGAE==%26rs=AOn4CLD77Klpsjob57Gpp_n-zlMeEizNkA</item>
        <item>https://i.ytimg.com/vi/LAtPHANEfQo/hqdefault.jpg?sqp=-oaymwEXCPYBEIoBSFryq4qpAwkIARUAAIhCGAE==%26rs=AOn4CLBLo9jgbn5ojeamIONqdRJUd6It-g</item>
        <item>https://i.ytimg.com/vi/a82sXDVyu-k/hqdefault.jpg?sqp=-oaymwEXCPYBEIoBSFryq4qpAwkIARUAAIhCGAE==%26rs=AOn4CLAfbFrbzl5yX1hl1SmVDUOnMegE4Q</item>
    </string-array>
    <string-array name="link_video">
        <item>https://www.youtube.com/watch?v=AeAqt4mtNSU</item>
        <item>https://www.youtube.com/watch?v=2UeHBm5k05o</item>
        <item>https://www.youtube.com/watch?v=R6hW9QqYHJ4</item>
        <item>https://www.youtube.com/watch?v=3-gklul8hgg</item>
        <item>https://www.youtube.com/watch?v=ob2oRMEYsA0</item>
        <item>https://www.youtube.com/watch?v=h8jJQpJTiiA</item>
        <item>https://www.youtube.com/watch?v=LAtPHANEfQo</item>
        <item>https://www.youtube.com/watch?v=a82sXDVyu-k</item>
    </string-array>
    <string name="tv_head_list_video">Pilih Video yang Akan Anda Putar</string>
    <string-array name="judul_video">
        <item>Animasi mesin 2 tak</item>
        <item>Animasi mesin 4 tak</item>
        <item>Animasi mesin diesel</item>
        <item>Prinsip dasar mesin listrik</item>
        <item>Cara kerja induksi motor listrik</item>
        <item>Prinsip motor DC</item>
        <item>Prinsip kerja motor DC</item>
        <item>Prinsip kerja generator AC</item>
    </string-array>
    <string-array name="deskripsi_video">
        <item>Animasi mesin 2 tak</item>
        <item>Animasi mesin 4 tak</item>
        <item>Animasi mesin diesel</item>
        <item>Prinsip dasar mesin listrik</item>
        <item>Cara kerja induksi motor listrik</item>
        <item>Prinsip motor DC</item>
        <item>Prinsip kerja motor DC</item>
        <item>Prinsip kerja generator AC</item>
    </string-array>
    <string-array name="parent_glossarium">
        <item>Akselerasi </item>
        <item>Combustion Chamber</item>
        <item>Compression Ratio</item>
        <item>Daya </item>
        <item>Deselerasi </item>
        <item>Dieseling </item>
        <item>Displacement </item>
        <item>Energi </item>
        <item>Ergonomis </item>
        <item>Flywheel </item>
        <item>Fuel Injection</item>
        <item>Fuse </item>
        <item>Hertz (Hz)</item>
        <item>Ignition </item>
        <item>Joule </item>
        <item>Kecepatan rata-rata </item>
        <item>Knocking </item>
        <item>Multimeter </item>
        <item>Overhaul</item>
        <item>Oversize</item>
        <item>Porting </item>
        <item>RPM</item>
        <item>Switch </item>
        <item>Throotle Valve</item>
        <item>Torak </item>
        <item>Turbulensi </item>
        <item>Valve </item>
    </string-array>
    <string-array name="child_glossarium">
        <item>Penambahan Kecepatan melalui pemutaran handel gas/kecepatan lari awal kendaraan.</item>
        <item>Ruang bakar</item>
        <item>Jumlah volume ruang bakar dan volume silinder dibagi dengan volume ruang bakar</item>
        <item>Kemampuan untuk melakukan usaha tiap satu satuan waktu.</item>
        <item>Penurunan Kecepatan melalui pemutaran handel gas.</item>
        <item>Ledakan campuran udara dan minyak pelumas dalam ruang kompresi atau bagian lain dari sistem udara</item>
        <item>Volume total silinder</item>
        <item>Kemampuan untuk melakukan usaha</item>
        <item>Bisa dijangkau dengan mudah</item>
        <item>Gunanya untuk meneruskan putaran kruk as agar ia tidak mudah berhenti.</item>
        <item>Sistim pencampuran bahan bakar dengan udara pada motor bensin dengan cara menggunakan pompa yang menginjeksikan (menyemprotkan) bahan bakar kedalam intake manifold melalui injector.</item>
        <item>Sekering</item>
        <item>Satuan frekuensi, 1 Hz = 1 siklus per detik.</item>
        <item>Penyalaan api pembakaran. Berbeda dengan diesel yang menyalakan pembakaran bahan bakar dengan sistem panas hasil kompresi, system ignition menyalakan pembakaran dengan menangkap percikan api yang dibuat melalui rangkaian antara pembangkit tenaga accumulator (aki), kumparan, dan busi sebagai pemicu.</item>
        <item>Satuan usaha dalam SI, besarnya sama dengan kerja yang dilakukan oleh gaya 1 Newton untuk memindahkan benda sejauh 1 meter.</item>
        <item>Perpindahan suatu benda dibagi waktu yang diperlukan benda tersebut untuk berpindah</item>
        <item>Waktu pembakaran tertunda yang panjang, dan tekanan kompresi tinggi sekali yang mengakibatkan putaran mesin kasar</item>
        <item>Alat pengukur beberapa satuan listrik, Volt, Ampere, Ohm.</item>
        <item>Turun mesin</item>
        <item>Pembesaran diamater liner pada cilinder</item>
        <item>Langkah untuk mencari efisiensi volumetrik yang ideal buat gas bakar</item>
        <item>Rotation Per Minute atau Rotasi putaran mesin per menit</item>
        <item>Sakelar, alat untuk menyalakan atau mematikan peralatan listrik.</item>
        <item>Valve yang berfungsi untuk mengatur RPM mesin</item>
        <item>Piston atau Seher</item>
        <item>Getaran atau Goncangan akibat kinerja mesin</item>
        <item>Katup atau Klep</item>
    </string-array>
    <string name="tentang_saya">Tentang saya</string>
    <string name="header_tentang_aplikasi">Tentang Aplikasi</string>
    <string name="header_referensi_materi">Referensi Materi</string>
    <string name="isi_saya">merupakan mahasiswa Universitas Negeri Yogyakarta program studi Pendidikan Teknik Otomotif-S1 yang sedang berjuang menyelesaikan skripsi dengan media pembelajaran ini.</string>
    <string name="isi_tentang_aplikasi">e-MiKE merupakan media pembelajaran berbasis android untuk mata pelajaran Teknologi Otomotif Dasar kelas X yang berfokus pada materi Mesin Konversi Energi. Dengan adanya aplikasi ini pengguna diharapkan bisa belajar materi mesin konversi energi dimanapun dan kapanpun.</string>
    <string name="isi_referensi_materi">Materi didalam media pembelajaran ini diambil dari buku <b><i>Teknologi Dasar Otomotif Program Keahlian Teknik Otomotif untuk SMK/MAK</i></b> terbitan Mediatama, buku <b><i>Konversi Energi</i></b> terbitan Kementrian Pendidikan dan Kebudayaan Republik Indonesia, buku <b><i>Teknologi Dasar Otomotif untuk SMK/MAK</i></b>, terbitan Kementrian Pendidikan dan Kebudayaan Republik Indonesia, dan buku <b><i>Teknologi Dasar Otomotif untuk SMK dan MAK</i></b> terbitan Armico. Lalu untuk video mengambil referensi dari Youtube.</string>
</resources>