<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clkikd"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitleKiKd"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_judul_kikd"
        android:textColor="#111"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svkikd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleKiKd">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvki1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTextView"
                android:paddingBottom="10dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:text="@string/header_ki1"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#111"
                android:text="@string/isi_ki1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="8dp"
                android:textAlignment="gravity"
                android:background="@drawable/borderkikd"/>

            <TextView
                android:id="@+id/tvki2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTextView"
                android:paddingBottom="10dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/header_ki2"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderkikd"
                android:paddingBottom="8dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/isi_ki2"
                android:textAlignment="gravity"
                android:textColor="#111" />

            <TextView
                android:id="@+id/tvki3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTextView"
                android:paddingBottom="10dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/header_ki3"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderkikd"
                android:paddingBottom="8dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/isi_ki3"
                android:textAlignment="gravity"
                android:textColor="#111" />

            <TextView
                android:id="@+id/tvki4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTextView"
                android:paddingBottom="10dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/header_ki4"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderkikd"
                android:paddingBottom="8dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/isi_ki4"
                android:textAlignment="gravity"
                android:textColor="#111" />

            <TextView
                android:id="@+id/tvkd3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTextView"
                android:paddingBottom="10dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/header_kd3"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderkikd"
                android:paddingBottom="8dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@string/isi_kd3"
                android:textAlignment="gravity"
                android:textColor="#111" />

            <TextView
                android:id="@+id/tvkd4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTextView"
                android:paddingBottom="10dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/header_kd4"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderkikd"
                android:paddingBottom="8dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:layout_marginBottom="15dp"
                android:text="@string/isi_kd4"
                android:textAlignment="gravity"
                android:textColor="#111" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>