<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/alternate_background_smoother"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tentang_saya"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/ivSaya"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/test_menu"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/ivFb"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_gravity="center_horizontal"
                        android:padding="15dp"
                        android:src="@drawable/icon_facebook"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#fff"
                        />

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/ivTwitter"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:padding="15dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icon_twitte"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#fff"
                        />

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/ivWa"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:padding="15dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/test_menu"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#fff"
                        />

                    <de.hdodenhof.circleimageview.CircleImageView
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/ivInsta"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:padding="15dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icon_insta"
                        />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#111"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/tentang_saya" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:textColor="#111"
                android:text="@string/isi_saya" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#111"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/header_tentang_aplikasi" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:textColor="#111"
                android:text="@string/isi_tentang_aplikasi" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#111"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:text="@string/header_referensi_materi" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginBottom="12dp"
                android:textColor="#111"
                android:text="@string/isi_referensi_materi" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>